@@ -9,19 +9,23 @@
 
 <h2><a name="input">Input</a></h2>
 <h3>Description</h3>
-<p>Allows user interaction during the build process by displaying a message and
-reading a line of input from the console (System.in). The user will need to press
-the Return key.
-</p>
-<p>The message displayed can be set via the message attribute
-or as character data nested into the element.</p>
-<p>Optinonally a set of valid imput arguments can be defined via the validargs
-attribute. Input task will require the user to reenter values until the entered
-value matches one of the predefined.</p>
-<p>Optionally a property can be created from the value entered by the user. This
-property can then be used during the following build run. Input behaves according
-to <a href="property.html">property task</a> which means that existing properties
-cannot be overriden.</p>
+
+<p>Allows user interaction during the build process by prompting for
+input.  To do so, it uses the configured 
+<a href="../inputhandler.html">InputHandler</a>.</p>
+
+<p>The prompt can be set via the message attribute or as character
+data nested into the element.</p>
+
+<p>Optinonally a set of valid imput arguments can be defined via the
+validargs attribute. Input task will no accept value that don't match
+one of the predefined.</p>
+
+<p>Optionally a property can be created from the value entered by the
+user. This property can then be used during the following build
+run. Input behaves according to <a href="property.html">property
+task</a> which means that existing properties cannot be overriden.</p>
+
 <h3>Parameters</h3>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -31,37 +35,44 @@ cannot be overriden.</p>
   </tr>
   <tr>
     <td valign="top">message</td>
-    <td valign="top">the Message which gets displayed to the user during the build run.</td>
+    <td valign="top">the Message which gets displayed to the user
+    during the build run.</td>
     <td valign="top" align="center">No</td>
   </tr>
   <tr>
     <td valign="top">validargs</td>
-    <td valign="top">comma separated String containing valid input arguments. If set,
-	    input task will reject any input not defined here and input task will
-		require the user to reenter arguments until the entered one matches one of the
-		predefined. Validargs are compared case sensitive. If you want 'a' and 'A' to
-    	be accepted you will need to define both arguments within validargs.</td>
+    <td valign="top">comma separated String containing valid input
+    arguments. If set, input task will reject any input not defined
+    here.  Validargs are compared case sensitive. If you want 'a' and
+    'A' to be accepted you will need to define both arguments within
+    validargs.</td>
     <td valign="top" align="center">No</td>
   </tr>
   <tr>
     <td valign="top">addproperty</td>
-    <td valign="top">the name of a property to be created from input. Behaviour is equal
-	    to  <a href="property.html">property task</a> which means that existing properties
-  		cannot be overriden.</td>
+    <td valign="top">the name of a property to be created from
+    input. Behaviour is equal to <a href="property.html">property
+    task</a> which means that existing properties cannot be
+    overriden.</td>
     <td valign="top" align="center">No</td>
   </tr>
 </table>
 <h3>Examples</h3>
 <pre>  &lt;input/&gt;</pre>
-<p>Will pause the build run until return key is pressed.</p>
+<p>Will pause the build run until return key is pressed when using the
+<a href="../inputhandler.html#defaulthandler">default
+InputHandler</a>, the concrete behavior is defined by the InputHandler
+implementation you use.</p>
 <pre>  &lt;input&gt;Press Return key to continue...&lt;/input&gt;</pre>
-<p>Will display the message &quot;Press Return key to continue...&quot; and pause
-the build run until return key is pressed.</p>
+<p>Will display the message &quot;Press Return key to
+continue...&quot; and pause the build run until return key is pressed
+(again, the concrete behavior is implementation dependent).</p>
 <pre>  &lt;input
     message=&quot;Press Return key to continue...&quot;
   /&gt;</pre>
-<p>Will display the message &quot;Press Return key to continue...&quot; and pause
-the build run until return key is pressed.</p>
+<p>Will display the message &quot;Press Return key to
+continue...&quot; and pause the build run until return key is pressed
+(see above).</p>
 <pre>
   &lt;input
     message=&quot;All data is going to be deleted from DB continue (y/n)?&quot;
@@ -73,9 +84,10 @@ the build run until return key is pressed.</p>
   &lt;/condition&gt;
   &lt;fail if=&quot;do.abort&quot;&gt;Build aborted by user.&lt;/fail&gt;
 </pre>
-<p>Will display the message &quot;All data is going to be deleted from DB continue
-(y/n)?&quot; and require 'y+retrun key' to continue build or 'n+return key'
-to exit build with following message &quot;Build aborted by user.&quot;.</p>
+<p>Will display the message &quot;All data is going to be deleted from
+DB continue (y/n)?&quot; and require 'y' to continue build or 'n' to
+exit build with following message &quot;Build aborted by
+user.&quot;.</p>
 <pre>  &lt;input
     message=&quot;Please enter db-username:&quot;
     addproperty=&quot;db.user&quot;
@@ -84,7 +96,7 @@ to exit build with following message &quot;Build aborted by user.&quot;.</p>
 property <code>db.user</code> to the value entered by the user.</p>
 
 <hr>
-<p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2001-2002 Apache Software Foundation. All rights
 Reserved.</p>
 </body>
 </html>
