@@ -15,6 +15,7 @@
 <a href="develop.html#writingowntask">Writing Your Own Task</a><br>
 <a href="develop.html#buildevents">Build Events</a><br>
 <a href="develop.html#integration">Source-code Integration</a><br>
+<a href="inputhandler.html">InputHandler</a><br>
 
 </body>
 </html>
