@@ -76,12 +76,15 @@ Options:
   -D&lt;property&gt;=&lt;value&gt;   use value for given property
   -propertyfile &lt;name&gt;   load all properties from file with -D
                          properties taking precedence
+  -inputhandler &lt;class&gt;  the class which will handle input requests
   -find &lt;file&gt;           search for buildfile towards the root of the
                          filesystem and use it
 </pre>
 <p>For more information about <code>-logger</code> and
 <code>-listener</code> see the section <a
 href="listeners.html">Loggers &amp; Listeners</a>
+<p>For more information about <code>-inputhandler</code> see the
+section <a href="inputhandler.html">InputHandler</a>
 <h3>Examples</h3>
 <blockquote>
   <pre>ant</pre>
